# hmi-engine

./: .env.example  .gitignore  Caddyfile  PLAN.md  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
agents/: Dockerfile  pyproject.toml
agents/eval/: benchmark_results.json
agents/src/agents/: main.py
agents/src/agents/a2a/: agent_cards.py  protocol.py  router.py
agents/src/agents/eval/: eval_harness.py
agents/src/agents/graph/: graph.py  state.py
agents/src/agents/graph/nodes/: evaluator.py  news_analyst.py  researcher_analyst.py  supervisor.py  writer.py
agents/src/agents/prompts/: news_analyst.py  supervisor.py  writer.py
agents/src/agents/tools/: computer_use.py  mcp_client.py  memory.py  sandbox.py
agents/src/agents/utils/: sentiment.py
agents/tests/test_agents/: test_eval_harness.py  test_memory.py
dashboard/: .gitignore  Dockerfile  jest.config.ts  package-lock.json  package.json
dashboard/src/__tests__/: api.test.ts  useResearchStatus.test.tsx  utils.test.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/hooks/: useAllHistory.ts  useDashboard.ts  useHistory.ts  useRankings.ts  useResearchStatus.ts
dashboard/src/lib/: api.ts  store.ts  types.ts  utils.ts
docs/: API.md  ARCHITECTURE.md  ENGINEERING_LOG.md
docs/superpowers/plans/: 2026-04-17-nextjs-dashboard.md
mcp-server/: Dockerfile  alembic.ini  pyproject.toml
mcp-server/alembic/: env.py
mcp-server/alembic/versions/: 0001_initial.py  0002_market_history.py
mcp-server/src/mcp_server/: main.py  observability.py  server.py
mcp-server/src/mcp_server/db/: models.py  seed.py  session.py
mcp-server/src/mcp_server/feeds/: kpi_ingestor.py  news_fetcher.py  rate_fetcher.py
mcp-server/src/mcp_server/middleware/: auth.py  rate_limit.py
mcp-server/src/mcp_server/tools/: housing_market.py  search_houses.py  valuation_data.py
mcp-server/tests/: conftest.py
mcp-server/tests/test_mcp_server/: test_auth.py  test_news_fetcher.py  test_tools.py
(+27 files in other folders)
