[project]
name = "agents"
version = "0.1.0"
description = "Multi-Agent Orchestration for Housing Market Intelligence"
authors = [
    { name = "sudarsh-lang", email = "sudarsh@tau.us" }
]
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.7",
    "fastapi>=0.135.3",
    "httpx-sse>=0.4.3",
    "langgraph>=1.1.6",
    "litellm>=1.83.0",
    "mcp>=1.27.0",
    "playwright>=1.58.0",
    "pydantic>=2.13.0",
    "sentence-transformers>=5.4.1",
    "structlog>=25.0",
    "uvicorn>=0.44.0",
]

[project.scripts]
agents = "agents:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agents"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
