[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP Server for Housing Market Intelligence"
authors = [
    { name = "sudarsh-lang", email = "sudarsh@tau.us" }
]
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16",
    "anthropic>=0.50",
    "apscheduler>=3.11",
    "asyncpg>=0.30",
    "fastapi>=0.135.3",
    "fastmcp>=3.2.4",
    "feedparser>=6.0",
    "httpx>=0.28",
    "prometheus-fastapi-instrumentator>=7.0",
    "pydantic>=2.13.0",
    "python-dateutil>=2.9",
    "python-jose[cryptography]>=3.5",
    "sentry-sdk>=2.0",
    "slowapi>=0.1",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.0",
    "uvicorn>=0.44.0",
]

[project.scripts]
mcp-server = "mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that exercise database-backed tools",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
